# blissmont-shell

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  RUN.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: ProtoGen.cmake  toolchain-x86_64-linux.cmake
docs/: SHELL_CORE_SALE_LOOP_AND_TASKS_BRIEF.md
qml/: Main.qml
qml/components/: ActionBar.qml  BillTable.qml  CustomerBlock.qml  Icon.qml  ListRow.qml  LookupKeys.qml  SaleCompleteOverlay.qml  ScanField.qml  StatusLine.qml  TasksMenu.qml  TopBar.qml  TotalsBlock.qml
qml/panels/: BillDiscountPanel.qml  CalculatorPanel.qml  CashInPanel.qml  CustomerSearchPanel.qml  HistoryPanel.qml  ItemPanel.qml  PayoutPanel.qml  ProductSearchPanel.qml  ReturnPanel.qml  SettingsPanel.qml  SundryPanel.qml  SuspendPanel.qml  TenderPanel.qml
qml/screens/: BillingScreen.qml
qml/theme/: Theme.qml
src/: CMakeLists.txt
src/app/: main.cpp
src/bridge/: PosEngineBridge.cpp  PosEngineBridge.hpp
src/core/: Format.cpp  Format.hpp  Money.cpp  Money.hpp  Result.hpp
src/models/: BillDetailModel.cpp  BillDetailModel.hpp  CartLineModel.cpp  CartLineModel.hpp  CartSummary.cpp  CartSummary.hpp  HeldCartModel.cpp  HeldCartModel.hpp  HistoryListModel.cpp  HistoryListModel.hpp  ReturnLineModel.cpp  ReturnLineModel.hpp  TenderListModel.cpp  TenderListModel.hpp
src/services/: ConfigService.cpp  ConfigService.hpp  ConnectionService.cpp  ConnectionService.hpp  FormatService.cpp  FormatService.hpp
src/viewmodels/: BillingViewModel.cpp  BillingViewModel.hpp  HistoryViewModel.cpp  HistoryViewModel.hpp  LookupController.cpp  LookupController.hpp  PayoutViewModel.cpp  PayoutViewModel.hpp  ReturnViewModel.cpp  ReturnViewModel.hpp  SuspendResumeViewModel.cpp  SuspendResumeViewModel.hpp  TenderViewModel.cpp  TenderViewModel.hpp
tests/: CMakeLists.txt
tests/integration/: BridgeSmokeTest.cpp  ConfigRehydrateTest.cpp  main.cpp
tests/unit/: BillingViewModelTest.cpp  CartLineModelTest.cpp  ConfigServiceTest.cpp  FormatTest.cpp  HeldCartModelTest.cpp  HistoryListModelTest.cpp  HistoryViewModelTest.cpp  LookupControllerTest.cpp  MoneyTest.cpp  PayoutViewModelTest.cpp  ReturnViewModelTest.cpp  SuspendResumeViewModelTest.cpp  TenderViewModelTest.cpp  main.cpp
