# src/CMakeLists.txt — generated stubs, libshell (logic), and the GUI app.

# ── Generated proto/gRPC stubs (build output, gitignored) ─────────────────────
set(CONTRACTS_PROTO_ROOT ${CMAKE_SOURCE_DIR}/third_party/blissmont-contracts/proto)
blissmont_add_proto_library(shell_proto
  IMPORT_DIR ${CONTRACTS_PROTO_ROOT}
  OUT_DIR    ${CMAKE_SOURCE_DIR}/src/proto
  PROTOS     ${CONTRACTS_PROTO_ROOT}/terminal/v1/terminal.proto)

# ── libshell — the testability keystone (spec §2) ─────────────────────────────
# core + bridge + models + viewmodels + services compile into ONE static lib that
# both the GUI app and the unit tests link. Logic is tested with NO display, NO QML.
# It is a QML module (qt_add_qml_module) so the C++ types register for the QML layer;
# tests instantiate those same C++ classes directly and ignore QML entirely.
qt_add_library(shell STATIC
  core/Money.cpp            core/Money.hpp
  core/Result.hpp
  bridge/PosEngineBridge.cpp        bridge/PosEngineBridge.hpp
  models/CartLineModel.cpp          models/CartLineModel.hpp
  models/CartSummary.cpp            models/CartSummary.hpp
  models/TenderListModel.cpp        models/TenderListModel.hpp
  models/ReturnLineModel.cpp        models/ReturnLineModel.hpp
  viewmodels/BillingViewModel.cpp   viewmodels/BillingViewModel.hpp
  viewmodels/TenderViewModel.cpp    viewmodels/TenderViewModel.hpp
  viewmodels/ReturnViewModel.cpp    viewmodels/ReturnViewModel.hpp
  services/ConnectionService.cpp    services/ConnectionService.hpp
  services/ConfigService.cpp        services/ConfigService.hpp
)

# The Qt-generated <module>_qmltyperegistrations.cpp includes each QML_ELEMENT type's
# header by BARE BASENAME under an __has_include guard (e.g. <PosEngineBridge.hpp>),
# not by its path relative to src/. Our headers live in subdirs (bridge/, services/,
# viewmodels/, models/), so those guards only resolve if the containing dirs are on
# the include path. Add them, or the includes silently drop and the registered types
# are undeclared in the generated TU.
target_include_directories(shell PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/core
  ${CMAKE_CURRENT_SOURCE_DIR}/bridge
  ${CMAKE_CURRENT_SOURCE_DIR}/models
  ${CMAKE_CURRENT_SOURCE_DIR}/viewmodels
  ${CMAKE_CURRENT_SOURCE_DIR}/services)
target_link_libraries(shell
  PUBLIC
    Qt6::Core
    Qt6::Qml
    shell_proto)

# The QML sources live under <root>/qml, a sibling of this src/ dir. Qt derives a
# resource alias from each file's path relative to the target's source dir; for files
# outside it that relative path contains "..", which is invalid in a resource — Qt 6.8
# errors unless QT_RESOURCE_ALIAS is set. Map each file to its path relative to qml/.
set(SHELL_QML_FILES
  Main.qml
  screens/BillingScreen.qml
  panels/ItemPanel.qml
  panels/TenderPanel.qml
  panels/ReturnPanel.qml
  components/ScanField.qml
  components/BillTable.qml
  components/StatusLine.qml
  theme/Theme.qml)
foreach(_qml ${SHELL_QML_FILES})
  set_source_files_properties(${CMAKE_SOURCE_DIR}/qml/${_qml}
    PROPERTIES QT_RESOURCE_ALIAS ${_qml})
endforeach()

# Theme.qml is a `pragma Singleton` — tell the QML module system so it registers as one.
set_source_files_properties(${CMAKE_SOURCE_DIR}/qml/theme/Theme.qml
  PROPERTIES QT_QML_SINGLETON_TYPE TRUE)

qt_add_qml_module(shell
  URI Blissmont.Shell
  VERSION 1.0
  RESOURCE_PREFIX /qt/qml
  QML_FILES
    ${CMAKE_SOURCE_DIR}/qml/Main.qml
    ${CMAKE_SOURCE_DIR}/qml/screens/BillingScreen.qml
    ${CMAKE_SOURCE_DIR}/qml/panels/ItemPanel.qml
    ${CMAKE_SOURCE_DIR}/qml/panels/TenderPanel.qml
    ${CMAKE_SOURCE_DIR}/qml/panels/ReturnPanel.qml
    ${CMAKE_SOURCE_DIR}/qml/components/ScanField.qml
    ${CMAKE_SOURCE_DIR}/qml/components/BillTable.qml
    ${CMAKE_SOURCE_DIR}/qml/components/StatusLine.qml
    ${CMAKE_SOURCE_DIR}/qml/theme/Theme.qml
)

# ── GUI application ───────────────────────────────────────────────────────────
qt_add_executable(blissmont-shell app/main.cpp)
target_link_libraries(blissmont-shell
  PRIVATE
    shell
    shellplugin            # QML plugin generated by qt_add_qml_module(shell)
    Qt6::Gui
    Qt6::Quick
    Qt6::QuickControls2)

set_target_properties(blissmont-shell PROPERTIES
  WIN32_EXECUTABLE ON
  MACOSX_BUNDLE ON)
